# Definetti

./: .ghcid  .gitignore  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  default.nix  definetti.cabal  definetti.nix  nixpkgs.json  shell.nix  stack.yaml
app/: Main.hs
src/: .dir-locals.el  Lib.hs
src/Logic/: CNF.hs  LinearProgramming.hs  Probability.hs  Propositional.hs  Semantics.hs  Temporal.hs
src/Logic/Formula/Data/: Literal.hs  MaxSatClause.hs  Propositional.hs
src/Logic/Formula/Transform/: Tseitin.hs
src/Logic/Probability/: Categorical.hs  Inequalities.hs  Inequality.hs  Regression.hs
src/Logic/Propositional/: DPLL.hs  Free.hs  Tseitin.hs
src/Logic/Propositional/Internal/: DPLL.hs  Free.hs  Tseitin.hs  WeightedSat.hs
src/Logic/Satisfaction/: MaxSat.hs  Sat.hs
src/Logic/Semantics/Satisfaction/: PropositionalSat.hs  Sat.hs
src/Logic/Temporal/: Common.hs  Optimized.hs
src/Logic/Z3/: LinearProgramming.hs
src/Logic/Z3/Internal/: LinearProgramming.hs
test/: .dir-locals.el  HLint.hs  TastyTests.hs  TestSuite.hs
test/Logic/: LinearProgramming.hs  ProbabilityTest.hs  PropositionalTest.hs  TemporalTest.hs  TestAtom.hs
test/Logic/Formula/Data/Propositional/: QuickCheck.hs
test/Logic/Formula/Transform/: TseitinTest.hs
test/Logic/Tasty/Suite/: LinearProgrammingTest.hs  ProbabilityTest.hs  PropositionalTest.hs  TemporalTest.hs
