name:                definetti
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/definetti#readme
author:              Matthew Doty
maintainer:          matthew.wampler.doty@gmail.com
copyright:           2018 Matthew Doty
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag enable-cli-app
  Default:       False

library
  hs-source-dirs:       src
  build-depends:        base            >= 4.7 && < 5
                      , containers      >= 0.5 && < 0.6
                      , safe-exceptions >= 0.1 && < 0.2
                      , unliftio        >= 0.2 && < 0.3
                      , z3              >= 4.2 && < 4.4
  default-language:     Haskell2010
  exposed-modules:      Logic.Propositional
                      , Logic.Probability
                      , Logic.Semantics
                      , Logic.Temporal
  other-modules:        Logic.Propositional.Tseitin
                      , Logic.Propositional.DPLL
                      , Logic.Propositional.Free
  ghc-options:          -Wall -Werror

executable shepherd
  if flag(enable-cli-app)
    Buildable: True
  else
    Buildable: False
  main-is:              Main.hs
  hs-source-dirs:       app
  default-language:     Haskell2010
  build-depends:        definetti
                      , base                 >= 4.7  && < 5
                      , optparse-applicative >= 0.13 && < 0.15
  ghc-options:          -Wall -Werror

test-suite definetti-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              TastyTests.hs
  build-depends:        definetti
                      , base             >= 4.7  && < 5
                      , QuickCheck       >= 2.9  && < 2.12
                      , containers       >= 0.5  && < 0.6
                      , tasty            >= 1.1  && < 1.2
                      , tasty-quickcheck >= 0.8  && < 0.11
                      , tasty-hunit      >= 0.9  && < 1.0
                      ----
                      , safe-exceptions  >= 0.1 && < 0.2
                      , transformers     >= 0.5 && < 0.6
                      , unliftio         >= 0.2 && < 0.3
                      , z3               >= 4.0 && < 4.4
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:        Logic.Tasty.Suite.LinearProgrammingTest
                      , Logic.Tasty.Suite.PropositionalTest
                      , Logic.Tasty.Suite.ProbabilityTest
                      , Logic.Tasty.Suite.TemporalTest
                      , Logic.TestAtom
                      , Logic.LinearProgramming
  default-language:     Haskell2010
  ghc-options:          -Wall -Werror

test-suite hlint
  type:                exitcode-stdio-1.0
  main-is:             HLint.hs
  build-depends:       base
                     , hlint >= 1.9
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
